Ajout ombre sur titre

--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -42,7 +42,7 @@
 }
 
 .txt-shadow {
-  text-shadow: 0.07em 0.10em 0.15em var(--text-shadow);
+  text-shadow: 0.07em 0.10em 0.15em var(--text-shadow), 0em 0em 0.15em var(--text-shadow);
 }
 
 .subtle-txt-shadow {
